# slurm-model

./: README.md  pyproject.toml
slurm_model/data/: __init__.py  slurm_db.py
slurm_model/runtime_estimation/: base.py
