[tool.poetry]
name = "slurm-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "slurm_model"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
